--- a/plotter.css
+++ b/plotter.css
@@ -32,6 +32,12 @@
 	text-shadow: rgb(0, 0, 0) 0px 0px 1px;
 }
 
+.plotter_inputgroup-blue {
+	background-color: rgb(0, 0, 255);
+	color: white;
+	text-shadow: rgb(0, 0, 0) 0px 0px 1px;
+}
+
 .plotter_inputgroup-lightblue {
 	background-color: rgb(0, 153, 255);
 	color: white;
