--- a/plotter.css
+++ b/plotter.css
@@ -44,6 +44,12 @@
 	text-shadow: rgb(0, 0, 0) 0px 0px 1px;
 }
 
+.plotter_inputgroup-lightBlue {
+	background-color: rgb(0, 153, 255);
+	color: white;
+	text-shadow: rgb(0, 0, 0) 0px 0px 1px;
+}
+
 .plotter_inputgroup-orange {
 	background-color: rgb(255, 153, 0);
 	color: white;
